added the necessary info

--- a/index.html
+++ b/index.html
@@ -41,6 +41,25 @@
 
     <!-- Not header -->
 
+    <div class="container" id="page-content">
+        <div class="row mb-5">
+            <div class="col-md-6 my-auto">
+                  <div class="carda">
+                    <div class="card-header icon">
+                      <h4 class="my-0 font-weight-normal "><img src="assets/icons/note-0.png"> Sobre mim</h4>
+                    </div>
+                    <div class="card-body">
+                        <li>Olá, meu nome é Lenon Saturnino Bernardino. Estou no ensino médio no Instituto Federal, campus Alvorada. Atualmente procuro emprego como programador, esse site contém meus principais projetos.</li>
+                        <li>Email para contato: lenon.bernardino@gmail.com</li>
+                        <li>Celular: 51 982481261</li>
+                        <li>Linkedin: https://www.linkedin.com/in/lenon-bernardino-12505a229/</li>
+                        <li>Stack overflow: https://stackoverflow.com/users/14262386/lenon-saturnino-bernardino</li>
+                    </div>
+                  </div>
+              </div>
+        </div>
+      </div>
+
     <div class="card">
         <div class="card-header">
             <h4 class="my-0 font-weight-normal">Cadastrador de pessoas</h4>
